devel
-----

* Enabled IPO with cmake as an option, default is on for release builds without
  google tests.

* Bugfix: The AQL sort-limit optimization was applied in some cases it shouldn't, resulting in undefined behaviour.

* Remove operations documents in the cluster will now use an optimization, if all sharding keys 
  were specified. Should the sharding keys not match the values in the actual document
  a not found error will be returned.

* Fixed AQL constrained-heap sort in conjunction with fullCount.

* Fixed "ArangoDB is not running in cluster mode" errors in active failover setups.
  This affected at least /_admin/cluster/health.

* Fixed the removal (including a collection drop) of an orphanCollection from a
  graph definition when using the ArangShell. The boolean
  flag whether to drop the collection or not was not transferred properly.

* Retry hot backup list in cluster for 2 minutes before reporting error.

* Improved database creation within the cluster. In the case of coordinator outages
  during the creation of the database there was a chance that not all relevant
  system collections had been created. Although this database was accessible now
  some features did not work as expected (e.g. creation of graphs). We modified
  creation of a new database as an all or nothing operation and only allow access
  to the database after all system collections are properly perpared to avoid the
  above inconsistencies. Also creation of databases are now secured against
  coordinator outages, they will either be fully created or not visible and
  eventually dropped. This does not require any change on the client code.

* Added UI support to create documents in a collection using smartGraphAttribute
  and/or smartJoinAttribute.

* Allowing inconsistent rather than forcing hot backups.

* Fixed adding an orphan collections as the first collection in a SmartGraph.

* Fixed issue #9862: ServerException: RestHandler/RestCursorHandler.cpp:279
