@@ -1,6 +1,10 @@
 devel
 -----
 
+* Fix strange shutdown hanger which came from the fact that currently
+  libgcc/libmusl wrongly detect multi-threadedness in statically linked
+  executables.
+
 * Enabled IPO with cmake as an option, default is on for release builds without
   google tests.
 
